Update RetroGrid parameters especially for small screens, update mobileNav breakpoint to even 42rem, mobile menu button position, fix post layout due to code snippets and auto margins/justify self center idk why that happens but it causes overflow

--- a/packages/web/app/blog/[postSlug]/page.module.css
+++ b/packages/web/app/blog/[postSlug]/page.module.css
@@ -27,7 +27,6 @@
 .main {
   position: relative;
   max-width: 65ch;
-  margin: 0 auto;
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
@@ -77,6 +76,12 @@
   flex-direction: column;
   gap: 0.5rem;
   align-items: flex-end;
+}
+
+@media (min-width: 43rem) {
+  .main {
+    justify-self: center;
+  }
 }
 
 @media (min-width: 60rem) {
