--- a/packages/web/components/MobileMenu/MobileMenu.module.css
+++ b/packages/web/components/MobileMenu/MobileMenu.module.css
@@ -55,12 +55,12 @@
   display: none;
 }
 
-@media (max-width: 41.875rem) {
+@media (max-width: 42rem) {
   .mobileMenuButton {
     display: revert;
     position: fixed;
     z-index: 10001;
-    top: 12px;
+    top: 16px;
     right: 32px;
     width: 40px;
     height: 40px;
