--- a/packages/web/components/NavBar/NavBar.module.css
+++ b/packages/web/components/NavBar/NavBar.module.css
@@ -1,4 +1,4 @@
-@media (max-width: 41.875rem) {
+@media (max-width: 42rem) {
   .nav {
     display: none;
   }
